--- a/RecipeApp/public/stylesheets/styles.css
+++ b/RecipeApp/public/stylesheets/styles.css
@@ -12,7 +12,7 @@ body
 {
 
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	position: absolute;
+	position: relative;
 	left: 27%;
 }
 
