--- a/RecipeApp/views/myview.ejs
+++ b/RecipeApp/views/myview.ejs
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title><%=title %>
+    <title>Recipe Website
     </title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
@@ -8,8 +8,7 @@
     <script type="text/javascript" src="/javascripts/bootstrap.js"></script>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+
     <form>
       <br>
       <div class="row">
@@ -26,25 +25,28 @@
         </div>
       </div>
     </form>
+
+    <% recipes.forEach( function(recipe) { %>
+    <br><br>
     <div class="row">
       <div class="col-sm-9">
         <div class="card">
-          <img class="card-img-top" src="/images/lol.jpeg" style="width:100%" alt="Card image cap">
+          <img class="card-img-top" src="<%=recipe.imgurl %>" style="width:100%" alt="Card image cap">
           <div class="card-block">
             <br>
-            <h2 class="card-title text-center"> <%=title %>
+            <h2 class="card-title text-center"> <%=recipe.title %>
             </h2>
             <br>
             <h4 class="card-subtitle mb-2 text-muted"> Author</h4>
             <p class="card-text">
-              <%=author %>
+              <%=recipe.author %>
             </p>
             <br>
             <h4 class="card-subtitle mb-2 text-muted">
               Ingredients
             </h4>
             <ul class="ingredients">
-              <% ingredients.forEach( function(ingredient)
+              <% recipe.ingredients.forEach( function(ingredient)
               {%>
                 <li> <%=ingredient.name %>
                 </li>
@@ -54,24 +56,18 @@
             </ul>
             <br>
             <h4 class="card-subtitle mb-2 text-muted">Procedure</h4>
+            <br>
             <p class="card-text">
-              <ul class="no-list-style">
-                <% for(var i=0;i<procedure.length;++i)
-                {
-                %>
-                <li>
-                  <%=procedure[i] %>
-                </li>
-                <%
-                }
-                %>
-              </ul>
+             <%=recipe. procedure %>
 
             </p>
+            <br>
           </div>
         </div>
       </div>
     </div>
+    <br><br>
+    <% }) %>
 
   </body>
 </html>
