search case insensitive
Made search better

--- a/RecipeApp/views/notfound.ejs
+++ b/RecipeApp/views/notfound.ejs
@@ -14,10 +14,10 @@
     return target.split(search).join(replacement);
   };
 
-  url = "http://localhost:3000/"; //Need to change during deployment
+   url = "/";//Need to change during deployment
 
   %>
-    <form method="post" action="<%= url %>"> 
+    <form method="get" action="<%= url %>"> 
       <br>
       <div class="row">
         <div class="col-md-5">
