--- a/RecipeApp/views/myview.ejs
+++ b/RecipeApp/views/myview.ejs
@@ -14,7 +14,7 @@
     return target.split(search).join(replacement);
   };
 
-  url = "http://localhost:3000/"; //Need to change during deployment
+  url = "/"; //Need to change during deployment
 
   %>
     <form method="get" action="<%= url %>"> 
@@ -66,6 +66,7 @@
             <h4 class="card-subtitle mb-2 text-muted">Procedure</h4>
             <br>
             <p class="card-text">
+		
              <%=recipe.procedure %>
 
             </p>
