--- a/RecipeApp/views/myform.html
+++ b/RecipeApp/views/myform.html
@@ -5,8 +5,9 @@
 
   </head>
   <body>
-    <form action="/myform/uploadpicture" method="POST" enctype="multipart/form-data">
-      <input type="file" name="myPhotos" multiple >
+    <form action="/myform/uploadPicture" method="POST" enctype="multipart/form-data">
+      <input type="file" name="myPhotos" multiple />
+      <input type="text" name="mytext" />
       <input type="submit" value="Submit">
     </form>
   </body>
