--- a/RecipeApp/views/myform.html
+++ b/RecipeApp/views/myform.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
 
@@ -11,4 +11,57 @@
       <input type="submit" value="Submit">
     </form>
   </body>
+</html>
+ -->
+
+
+ <!DOCTYPE html>
+<html>
+<head>
+  <title>Create New Recipe</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+</head>
+<body style="background-image:url(/images/bg2.jpeg);background-repeat=no-repeat;background-size:100%">
+  <div class="container">
+  <div class="card" style="width:47%;background-color:#cce6ff; background-size: 100%;position:absolute;left:26%;top:24%">
+    <h1 class="card-header">Enter your new recipe!</h1>
+  <form style="padding:3%" action="/myform/uploadForm" method="POST" enctype="multipart/form-data">
+<div class="form-group row">
+    <label class="col-sm-2 col-form-label">Title:</label>
+    <div class="col-sm-10">
+    <input type="text" class="form-control" name="recipeTitle" required>
+    </div>
+</div>
+<div class="form-group row">
+    <label class="col-sm-2 col-form-label">Author:</label>
+    <div class="col-sm-10">
+    <input type="text" class="form-control" name="recipeAuthor">
+    </div>
+</div>
+<div class="form-group row">
+    <label class="col-sm-2 col-form-label">Ingredients:</label>
+    <div class="col-sm-10">
+    <input type="text" class="form-control" name="ingredients" placeholder="Please enter comma separated ingredients." required>
+    </div>
+</div>
+<div class="form-group row">
+    <label class="col-sm-2 col-form-label">Procedure:</label>
+    <div class="col-sm-10">
+    <textarea class="form-control" name="procedure" required>
+    </textarea>
+    </div>
+</div>
+<div class="form-group row">
+    <label class="col-sm-2 col-form-label">Upload images:</label>
+    <div class="col-sm-10">
+    <input type="file" class="form-control-file" name="myPhotos" multiple>
+    </div>
+</div>
+  <div class="offset-sm-2 col-sm-10">
+        <button type="submit" class="btn btn-primary" >Submit your recipe!</button>
+      </div>
+</form>
+</div>
+</div>
+</body>
 </html>
