--- a/RecipeApp/views/index.html
+++ b/RecipeApp/views/index.html
@@ -24,8 +24,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='//fonts.googleapis.com/css?family=Raleway:400,200,100,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
 <link href='//fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic,700' rel='stylesheet' type='text/css'>
 <!-- start-smoth-scrolling -->
-		<script type="text/javascript" src="js/move-top.js"></script>
-		<script type="text/javascript" src="js/easing.js"></script>
+		<script type="text/javascript" src="/javascripts/move-top.js"></script>
+		<script type="text/javascript" src="/javascripts/easing.js"></script>
 		<script type="text/javascript">
 			jQuery(document).ready(function($) {
 				$(".scroll").click(function(event){
@@ -35,8 +35,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			});
 		</script>
 	<!-- start-smoth-scrolling -->
-<link href="/stylesheets/styles.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/component.css" />
+<link href="/stylesheets/homestyles.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/stylesheets/component.css" />
 	<!-- animation-effect -->
 <link href="/stylesheets/animate.min.css" rel="stylesheet">
 <script src="/javascripts/wow.min.js"></script>
@@ -53,7 +53,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<h1><a href="index.html"><span>C</span><img src="/images/oo.png" alt=""><img src="/images/oo.png" alt="">kery</a></h1>
 		</div>
 		<div class="nav-icon">
-			<a href="#" class="navicon"></a>
+			<a href="" class="navicon"></a>
 				<div class="toggle">
 					<ul class="toggle-menu">
 						<li><a class="active" href="index.html">Home</a></li>
@@ -76,9 +76,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	</div>
 	<!-- start search-->
 		<div class="banner">
-			<p class="animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">Sed ut perspiciatis unde omnis iste natus.</p>
+			<p class="animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">THE FOOD BLOG.</p>
 			<label></label>
-			<h4 class="animated wow fadeInTop" data-wow-duration="1000ms" data-wow-delay="500ms">Hello And Welcome To Food</h4>
+			<h4 class="animated wow fadeInTop" data-wow-duration="1000ms" data-wow-delay="500ms">Hello And Welcome To Food Blog</h4>
 			<a class="scroll down" href="#content-down"><img src="/images/down.png" alt=""></a>
 		</div>
 </div>
