search bar on home

--- a/RecipeApp/views/index.html
+++ b/RecipeApp/views/index.html
@@ -74,6 +74,24 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>
 	<div class="clearfix"></div>
 	</div>
+	<div class="searchbar">
+		<form method="get" action="/">
+		<br>
+		<div class="row">
+			<div class="col-md-12">
+				<div class="input-group">
+					<input type="text" class="form-control" name="search" placeholder="Search" id="txtSearch"/>
+					<div class="input-group-btn">
+						<button id="searchBtn" class="btn btn-default" type="submit">
+							<span class="glyphicon glyphicon-search">
+							</span>
+						</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</form>
+</div>
 	<!-- start search-->
 		<div class="banner">
 			<p class="animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">THE FOOD BLOG.</p>
@@ -337,7 +355,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"> </div>
 
 			</div>
-			<p class="footer-class animated wow bounce" data-wow-duration="1000ms" data-wow-delay="500ms">&copy; 2016 Cookery . All Rights Reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+			<p class="footer-class animated wow bounce" data-wow-duration="1000ms" data-wow-delay="500ms">&copy; 2016 Cookery . All Rights Reserved | Design by  <a href="https://github.com/SanjayJosh/RecipeSite" target="_blank">Team D5</a> </p>
 		</div>
 	</div>
 	<!--//footer-->
