--- a/RecipeApp/views/myview.ejs
+++ b/RecipeApp/views/myview.ejs
@@ -17,7 +17,7 @@
   url = "/"; //Need to change during deployment
 
   %>
-    <form method="get" action="<%= url %>"> 
+    <form method="get" action="/"> 
       <br>
       <div class="row">
         <div class="col-md-5">
@@ -66,7 +66,7 @@
             <h2 class="card-subtitle mb-2 text-muted">Procedure</h2>
             <br>
             <p class="card-text">
-		
+
              <%=recipe.procedure %>
 
             </p>
