Correct routes for menu

--- a/RecipeApp/views/index.html
+++ b/RecipeApp/views/index.html
@@ -56,12 +56,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<a href="" class="navicon"></a>
 				<div class="toggle">
 					<ul class="toggle-menu">
-						<li><a class="active" href="index.html">Home</a></li>
-						<li><a  href="menu.html">Menu</a></li>
-						<li><a  href="blog.html">Blog</a></li>
-						<li><a  href="typo.html">Codes</a></li>
-						<li><a  href="events.html">Events</a></li>
-						<li><a  href="contact.html">Contact</a></li>
+						<li><a class="active" href="/index">Home</a></li>
+						<li><a  href="/recipeform">Upload Recipe</a></li>
+						<li><a  href="/yourdish">Prepare Your Dish</a></li>
+						<li><a  href="/contact">Contact</a></li>
 					</ul>
 				</div>
 			<script>
@@ -75,7 +73,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="clearfix"></div>
 	</div>
 	<div class="searchbar">
-		<form method="get" action="/">
+		<form method="get" action="/myview">
 		<br>
 		<div class="row">
 			<div class="col-md-12">
@@ -331,11 +329,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="footer-head">
 				<div class="col-md-8 footer-top animated wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="500ms">
 					<ul class=" in">
-						<li><a href="index.html">Home</a></li>
-						<li><a  href="menu.html">Menu</a></li>
-						<li><a  href="blog.html">Blog</a></li>
-						<li><a  href="events.html">Events</a></li>
-						<li><a  href="contact.html">Contact</a></li>
+						<li><a href="/index">Home</a></li>
+						<li><a  href="/recipeform">Upload Recipe</a></li>
+						<li><a  href="/yourdish">Prepare Your Dish</a></li>
+						<li><a  href="/contact">Contact</a></li>
 					</ul>
 						<span>There are many variations of passages</span>
 				</div>
