--- a/RecipeApp/views/myform.html
+++ b/RecipeApp/views/myform.html
@@ -1,67 +1,48 @@
-<!-- <!DOCTYPE html>
-<html>
-  <head>
-
-
-  </head>
-  <body>
-    <form action="/myform/uploadPicture" method="POST" enctype="multipart/form-data">
-      <input type="file" name="myPhotos" multiple />
-      <input type="text" name="mytext" />
-      <input type="submit" value="Submit">
-    </form>
-  </body>
-</html>
- -->
-
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Create New Recipe</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,700,900' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/recipeform.css">
 </head>
-<body style="background-image:url(/images/bg2.jpeg);background-repeat=no-repeat;background-size:100%">
-  <div class="container">
-  <div class="card" style="width:47%;background-color:#cce6ff; background-size: 100%;position:absolute;left:26%;top:24%">
-    <h1 class="card-header">Enter your new recipe!</h1>
-  <form style="padding:3%" action="/myform/uploadForm" method="POST" enctype="multipart/form-data">
-<div class="form-group row">
-    <label class="col-sm-2 col-form-label">Title:</label>
-    <div class="col-sm-10">
-    <input type="text" class="form-control" name="recipeTitle" required>
+
+<body>
+<div class="back"></div>
+<div class="registration-form">
+  <header>
+    <h1>Add a New Recipe!</h1>
+    <p>Fill in all fields</p>
+  </header>
+  <form action="/myform/uploadForm" method="POST" enctype="multipart/form-data">
+    <div class="input-section title-section">
+      <input class="form-control title" type="text" placeholder="Enter your reciple title" name="recipeTitle" autocomplete="off"/>
+      <div class="animated-button"><span class="icon-paper-plane"><i class="fa fa-quote-right"></i></span><span class="next-button title"><i class="fa fa-arrow-up"></i></span></div>
     </div>
-</div>
-<div class="form-group row">
-    <label class="col-sm-2 col-form-label">Author:</label>
-    <div class="col-sm-10">
-    <input type="text" class="form-control" name="recipeAuthor">
+    <div class="input-section author-section folded">
+      <input class="form-control author" type="text" placeholder="Enter author name" name="recipeAuthor"/>
+      <div class="animated-button"><span class="icon-lock"><i class="fa fa-user-o"></i></span><span class="next-button author"><i class="fa fa-arrow-up"></i></span></div>
     </div>
-</div>
-<div class="form-group row">
-    <label class="col-sm-2 col-form-label">Ingredients:</label>
-    <div class="col-sm-10">
-    <input type="text" class="form-control" name="ingredients" placeholder="Please enter comma separated ingredients." required>
+	<div class="input-section ingredients-section folded">
+      <input class="form-control ingredients" type="text" placeholder="Ingredients separated by commas" name="ingredients"/>
+      <div class="animated-button"><span class="icon-lock"><i class="fa fa-shopping-basket"></i></span><span class="next-button ingredients"><i class="fa fa-arrow-up"></i></span></div>
     </div>
-</div>
-<div class="form-group row">
-    <label class="col-sm-2 col-form-label">Procedure:</label>
-    <div class="col-sm-10">
-    <textarea class="form-control" name="procedure" required>
-    </textarea>
+	<div class="input-section procedure-section folded">
+      <textarea class="form-control procedure" placeholder="Enter the procedure" name="procedure"></textarea>
+      <div class="animated-button"><span class="icon-lock"><i class="fa fa-pencil"></i></span><span class="next-button procedure"><i class="fa fa-arrow-up"></i></span></div>
     </div>
-</div>
-<div class="form-group row">
-    <label class="col-sm-2 col-form-label">Upload images:</label>
-    <div class="col-sm-10">
-    <input type="file" class="form-control-file" name="myPhotos" multiple>
+    <div class="input-section image-section folded">
+      <input class="form-control-file image" type="file" placeholder="ATTACH IMAGE" name="myPhotos"/>
+      <div class="animated-button"><span class="icon-repeat-lock"><i class="fa fa-file-image-o"></i></span><span class="next-button image"><i class="fa fa-paper-plane"></i></span></div>
     </div>
+    <div class="success"> 
+      <p>RECIPE ADDED!</p>
+    </div>
+  </form>
 </div>
-  <div class="offset-sm-2 col-sm-10">
-        <button type="submit" class="btn btn-primary" >Submit your recipe!</button>
-      </div>
-</form>
-</div>
-</div>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
+    <script  src="javascripts/recipeform.js"></script>
 </body>
 </html>
