--- a/RecipeApp/views/contact.html
+++ b/RecipeApp/views/contact.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Cookery A Food Category Flat Bootstrap Responsive Website Template | Contact :: w3layouts</title>
+<title>The Food Network</title>
 <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="/javascripts/jquery.min.js"></script>
