--- a/RecipeApp/views/index.html
+++ b/RecipeApp/views/index.html
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE html>
 <html>
 <head>
-<title>Cookery A Food Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
+<title>The Food Network</title>
 <link href="/stylesheets/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="/javascripts/jquery.min.js"></script>
@@ -94,7 +94,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="banner">
 			<p class="animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">THE FOOD BLOG.</p>
 			<label></label>
-			<h4 class="animated wow fadeInTop" data-wow-duration="1000ms" data-wow-delay="500ms">Hello And Welcome To Food Blog</h4>
+			<h4 class="animated wow fadeInTop" data-wow-duration="1000ms" data-wow-delay="500ms">Welcome To The Food Network</h4>
 			<a class="scroll down" href="#content-down"><img src="/images/down.png" alt=""></a>
 		</div>
 </div>
@@ -106,10 +106,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="col-md-4 content-left animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">
 					<h3>About</h3>
 					<label><i class="glyphicon glyphicon-menu-up"></i></label>
-					<span>There are many variations</span>
+					<span>What we do</span>
 				</div>
 				<div class="col-md-8 content-right animated wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="500ms">
-					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour , or randomised words which don't look even slightly believable.There are many variations by injected humour. There are many variations of passages of Lorem Ipsum available.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form by injected humour , or randomised words</p>
+					<p> We're a community of people who share a love of food and social networking. Ranging from the traditional Grandma's recipes to new Michelin Star innovations, from a simple pasta to a complicated French dessert. It's all here.
+					</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -121,7 +122,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					  <div class="top">
 						<div class="front face"></div>
 						<div class="back face">
-						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+						<p>Look interesting? Find out how to make this!!!</p>
 						</div>
 					  </div>
 					  <div class="bottom"></div>
@@ -133,7 +134,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					  <div class="top">
 						<div class="front face front1"></div>
 						<div class="back face">
-						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+						<p>Look interesting? Find out how to make this!!!</p>
 						</div>
 					  </div>
 					  <div class="bottom bottom1"></div>
@@ -145,7 +146,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					  <div class="top">
 						<div class="front face front2"></div>
 						<div class="back face">
-						<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+						<p>Look interesting? Find out how to make this!!!</p>
 						</div>
 					  </div>
 					  <div class="bottom bottom2"></div>
@@ -160,12 +161,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="services-top">
 			<div class="col-md-8 services-right animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">
-					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour , or randomised words which don't look even slightly believable.There are many variations by injected humour. There are many variations of passages of Lorem Ipsum available.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form by injected humour , or randomised words</p>
+					<p>If you're looking for the perfect chocolate cake recipe, go ahead and search for the exact kind using our advanced search functionality. Exploring? Browse through our vibrant collection</p>
 			</div>
 			<div class="col-md-4 services-left animated wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="500ms">
 				<h3>Services</h3>
 				<label><i class="glyphicon glyphicon-menu-up"></i></label>
-				<span>There are many variations</span>
+				<span>Voila! Here's a great resource to start your cooking career!</span>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
@@ -205,8 +206,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<img src="/images/sa.jpg" class="img-responsive" alt="">
 					</div>
 					<div class="ser-top ">
-						<h5>Beautiful &amp; enjoyable designs</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
+						<h5>Breakfast</h5>
+						<p>Enjoy a high-protein snack with ingredients from around your home.</p>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -215,8 +216,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<img src="/images/sa1.jpg" class="img-responsive" alt="">
 					</div>
 					<div class="ser-top ">
-						<h5>Beautiful &amp; enjoyable designs</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
+						<h5>Lunch</h5>
+						<p>Splurge on a three-course lunch and enjoy the weekend siesta.</p>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -225,8 +226,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<img src="/images/sa2.jpg" class="img-responsive" alt="">
 					</div>
 					<div class="ser-top ">
-						<h5>Beautiful &amp; enjoyable designs</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
+						<h5>Supper</h5>
+						<p>A light salad, maybe? And one of our sinfully delicious desserts to end the day on a glorious note.</p>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -241,12 +242,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="container">
 			<div class="content-top">
 				<div class="col-md-4 content-left animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">
-					<h3>News</h3>
+					<h3>Recipes</h3>
 					<label><i class="glyphicon glyphicon-menu-up"></i></label>
-					<span>There are many variations</span>
+					<span>Take a sneak peek!</span>
 				</div>
 				<div class="col-md-8 content-right animated wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="500ms">
-					<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour , or randomised words which don't look even slightly believable.There are many variations by injected humour. There are many variations of passages of Lorem Ipsum available.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form by injected humour , or randomised words</p>
+					<p>Here are some crowd favourites. Click on one to know more. Happy Cooking!</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -258,11 +259,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="overlay"></div>
 								<div class=" news-bottom2">
 									<ul class="grid-news">
-										<li><span><i class="glyphicon glyphicon-calendar"> </i>08.09.2014</span><b>/</b></li>
-										<li><span><i class="glyphicon glyphicon-comment"> </i>5 Comment</span><b>/</b></li>
+										<li><span><i class="glyphicon glyphicon-calendar"> </i>08.09.2017</span><b>/</b></li>
+										<li><span><i class="glyphicon glyphicon-comment"> </i>2 Comment</span><b>/</b></li>
 										<li><span><i class="glyphicon glyphicon-share"> </i>Share</span></li>
 									</ul>
-									<p>There are many variations of passages of Lorem Ipsum available</p>
+									<p>Click for details</p>
 								</div>
 							</div>
 						</a>
@@ -273,11 +274,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="overlay"></div>
 								<div class=" news-bottom2">
 									<ul class="grid-news">
-											<li><span><i class="glyphicon glyphicon-calendar"> </i>08.09.2014</span><b>/</b></li>
+											<li><span><i class="glyphicon glyphicon-calendar"> </i>08.11.2016</span><b>/</b></li>
 											<li><span><i class="glyphicon glyphicon-comment"> </i>5 Comment</span><b>/</b></li>
 											<li><span><i class="glyphicon glyphicon-share"> </i>Share</span></li>
 										</ul>
-									<p>There are many variations of passages of Lorem Ipsum available</p>
+									<p>Click for details</p>
 								</div>
 							</div>
 						</a>
@@ -291,11 +292,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<div class="overlay"></div>
 								<div class=" news-bottom2">
 									<ul class="grid-news">
-											<li><span><i class="glyphicon glyphicon-calendar"> </i>08.09.2014</span><b>/</b></li>
+											<li><span><i class="glyphicon glyphicon-calendar"> </i>10.09.2017</span><b>/</b></li>
 											<li><span><i class="glyphicon glyphicon-comment"> </i>5 Comment</span><b>/</b></li>
 											<li><span><i class="glyphicon glyphicon-share"> </i>Share</span></li>
 										</ul>
-									<p>There are many variations of passages of Lorem Ipsum available</p>
+									<p>Click for details</p>
 								</div>
 							</div>
 						</a>
@@ -334,12 +335,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<li><a  href="/yourdish">Prepare Your Dish</a></li>
 						<li><a  href="/contact">Contact</a></li>
 					</ul>
-						<span>There are many variations of passages</span>
+						<span>Tell us what you liked about us!</span>
 				</div>
 				<div class="col-md-4 footer-bottom  animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">
 					<h2>Follow Us</h2>
 					<label><i class="glyphicon glyphicon-menu-up"></i></label>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis.</p>
+					<p>Find us on the Twitter handle @globalFoodNetwork</p>
 					<ul class="social-ic">
 						<li><a href="#"><i></i></a></li>
 						<li><a href="#"><i class="ic"></i></a></li>
