item pathparam included

--- a/RecipeApp/views/myview.ejs
+++ b/RecipeApp/views/myview.ejs
@@ -17,7 +17,7 @@
   url = "/"; //Need to change during deployment
 
   %>
-    <form method="get" action="/"> 
+    <form method="get" action="/myview"> 
       <br>
       <div class="row">
         <div class="col-md-5">
