What can you make? - form updated

--- a/RecipeApp/public/stylesheets/styles.css
+++ b/RecipeApp/public/stylesheets/styles.css
@@ -3,3 +3,40 @@ body
 	overflow-x: hidden;
 }
 
+
+.input-group
+{
+	position: absolute;
+	left: 65%;
+	top:3%;
+}
+.card /* Main Card View  */
+{
+
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	position: relative;
+	left: 27%;
+}
+
+.card-block
+{
+	padding: 3%;
+	text-align: justify;
+	font-family: "Times New Roman", Times, serif;
+	font-size: 1.7em;
+
+}
+
+.ingredients /* Listing of ingredients */
+{
+	list-style-type: circle;
+	list-style-position: inside;
+}
+.no-list-style
+{
+	list-style-type: none;	
+}
+.card-text
+{
+	white-space: pre-line;
+}
