--- a/RecipeApp/views/index.html
+++ b/RecipeApp/views/index.html
@@ -254,7 +254,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="news-bottom">
 				<div class="news-bot">
 					<div class="col-md-6 news-bottom1 animated wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="500ms">
-						<a href="single.html">
+						<a href="/item/Apple%20Pie">
 							<div class="content-item">
 								<div class="overlay"></div>
 								<div class=" news-bottom2">
@@ -269,7 +269,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</a>
 					</div>
 					<div class="col-md-6 news-bottom1 animated wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="500ms">
-						<a href="single.html">
+						<a href="/item/Chocolate%20Chip%20Cookies">
 							<div class="content-item content-item1">
 								<div class="overlay"></div>
 								<div class=" news-bottom2">
@@ -287,7 +287,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="news-bot">
 					<div class="col-md-6 news-bottom1">
-						<a href="single.html">
+						<a href="/item/Black%20and%20Blue%20Burger">
 							<div class="content-item content-item2 animated wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="500ms">
 								<div class="overlay"></div>
 								<div class=" news-bottom2">
@@ -302,7 +302,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</a>
 					</div>
 					<div class="col-md-6 news-bottom1 animated wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-						<a href="single.html">
+						<a href="/item/Tiramisu">
 							<div class="content-item content-item3">
 								<div class="overlay"></div>
 								<div class=" news-bottom2">
