Some extra stuff

--- a/RecipeApp/views/index.html
+++ b/RecipeApp/views/index.html
@@ -263,7 +263,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 										<li><span><i class="glyphicon glyphicon-comment"> </i>2 Comment</span><b>/</b></li>
 										<li><span><i class="glyphicon glyphicon-share"> </i>Share</span></li>
 									</ul>
-									<p>Click for details</p>
+									<p class="rpies">Apple Pie</p>
 								</div>
 							</div>
 						</a>
@@ -278,7 +278,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											<li><span><i class="glyphicon glyphicon-comment"> </i>5 Comment</span><b>/</b></li>
 											<li><span><i class="glyphicon glyphicon-share"> </i>Share</span></li>
 										</ul>
-									<p>Click for details</p>
+									<p class="rpies">Choco Chip Cookies</p>
 								</div>
 							</div>
 						</a>
@@ -296,7 +296,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											<li><span><i class="glyphicon glyphicon-comment"> </i>5 Comment</span><b>/</b></li>
 											<li><span><i class="glyphicon glyphicon-share"> </i>Share</span></li>
 										</ul>
-									<p>Click for details</p>
+									<p class="rpies">Black & Blue Burger</p>
 								</div>
 							</div>
 						</a>
@@ -311,7 +311,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 											<li><span><i class="glyphicon glyphicon-comment"> </i>5 Comment</span><b>/</b></li>
 											<li><span><i class="glyphicon glyphicon-share"> </i>Share</span></li>
 										</ul>
-									<p>There are many variations of passages of Lorem Ipsum available</p>
+									<p class="rpies">Tiramisu</p>
 								</div>
 							</div>
 						</a>
