--- a/RecipeApp/public/stylesheets/style.css
+++ b/RecipeApp/public/stylesheets/style.css
@@ -358,7 +358,7 @@ ul.grid-news li b {
 }
 /*--conent--*/
 .content-item {
-  background: url(../images/ne.jpg) no-repeat;
+  background: url(http://food.fnr.sndimg.com/content/dam/images/food/fullset/2012/10/3/0/FNM_110112-Apple-Pie-Recipes_s4x3.jpg.rend.hgtvcom.616.462.suffix/1371609388788.jpeg) no-repeat;
   -moz-backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -366,15 +366,20 @@ ul.grid-news li b {
   overflow: hidden;
   position: relative;
   z-index: 9999;
+  filter: brightness(70%);
+
 }
 .content-item1 {
-  background: url(../images/ne1.jpg) no-repeat;
+  background: url(http://food.fnr.sndimg.com/content/dam/images/food/fullset/2006/12/11/0/12Days_Chocolate_Chip_Cooki.jpg.rend.hgtvcom.616.462.suffix/1391394585748.jpeg) no-repeat;
+  filter: brightness(70%);
 }
 .content-item2 {
-  background: url(../images/ne2.jpg) no-repeat;
+  background: url(http://food.fnr.sndimg.com/content/dam/images/food/fullset/2014/11/18/1/GI1702H_Black-and-Blue-Burger_s4x3.jpg.rend.hgtvcom.616.462.suffix/1421853596006.jpeg) no-repeat;
+  filter: brightness(70%);
 }
 .content-item3 {
-  background: url(../images/ne3.jpg) no-repeat;
+  background: url(http://food.fnr.sndimg.com/content/dam/images/food/fullset/2011/2/4/2/RX-FNM_030111-Sugar-Fix-005_s4x3.jpg.rend.hgtvcom.616.462.suffix/1371597326801.jpeg) no-repeat;
+   filter: brightness(70%);
 }
 .content-item .overlay {
   border-bottom: 100px solid #97824b;
