--- a/RecipeApp/views/yourdish.html
+++ b/RecipeApp/views/yourdish.html
@@ -45,7 +45,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 </script> 
   </head>
   
-  <body style="background: #384047;font-family: sans-serif;">
+  <body style="background: #384047;">
   
 <div class="container" style="background-color:black;color:white;padding:20px;">
     <div class="logo animated wow pulse" data-wow-duration="1000ms" data-wow-delay="500ms">
@@ -55,12 +55,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <a href="" class="navicon"></a>
         <div class="toggle">
           <ul class="toggle-menu">
-            <li><a class="active" href="index.html">Home</a></li>
-            <li><a  href="menu.html">Menu</a></li>
-            <li><a  href="blog.html">Blog</a></li>
-            <li><a  href="typo.html">Codes</a></li>
-            <li><a  href="events.html">Events</a></li>
-            <li><a  href="contact.html">Contact</a></li>
+            <li><a class="active" href="/index">Home</a></li>
+						<li><a  href="/myform">Upload Recipe</a></li>
+						<li><a  href="/yourdish">Prepare Your Dish</a></li>
+						<li><a  href="/contact">Contact</a></li>
           </ul>
         </div>
       <script>
