--- a/RecipeApp/views/recipeform.html
+++ b/RecipeApp/views/recipeform.html
@@ -22,7 +22,7 @@
     </div>
     <div class="input-section author-section folded">
       <input class="form-control author" type="text" placeholder="Enter author name" name="recipeAuthor"/>
-      <div class="animated-button"><span class="icon-lock"><i class="fa fa-user-o"></i></span><span class="next-button author"><i class="fa fa-arrow-up"></i></span></div>
+      <div class="animated-button"><span class="icon-lock"><i class="fa fa-user"></i></span><span class="next-button author"><i class="fa fa-arrow-up"></i></span></div>
     </div>
 	<div class="input-section ingredients-section folded">
       <input class="form-control ingredients" type="text" placeholder="Ingredients separated by commas" name="ingredients"/>
